Bug #55114, a=brendan, r=mccabe. Fixed failure in enumerating Java string objects.